<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_margin="5dp">

        <ImageView
            android:id="@+id/poster"
            android:layout_width="80dp"
            android:layout_height="110dp"
            android:scaleType="fitXY"
            app:srcCompat="@mipmap/ic_launcher_round"
            android:contentDescription="@string/poster" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:gravity="center_vertical">
            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/movie_title"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"/>
            <TextView
                android:id="@+id/release_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/release_date"
                android:padding="2dp"/>
            <TextView
                android:id="@+id/overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/overview"
                android:padding="2dp"
                android:maxLines="2"
                android:ellipsize="end"/>
            <RatingBar
                android:id="@+id/voteAverage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/ratingBarStyleSmall"
                android:padding="2dp"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>